@@ -26,3 +26,7 @@ See <<container-factory>> for more information.
 A new container property `missingTopicsFatal` has been added.
 
 See <<kafka-container>> for more information.
+
+Batch listeners can optionally receive the complete `ConsumerRecords<?, ?>` object instead of a `List<ConsumerRecord<?, ?>`.
+
+See <<batch-listeners>> for more information.
